Теперь к каждому термину будет добавляться аналогичный термин на русском. Подправил под эти требования все файлы

--- a/data/terms/Boolean.html
+++ b/data/terms/Boolean.html
@@ -3,6 +3,10 @@
 Boolean (<b>bool</b>) - is one of fundamental data types in programming, it represents a logical type. Usually in most programming languages it takes 1 byte, but theoretically it requires only 1 bit, because thare're only 2 possible values: <b>true</b> or <b>false</b>.
 </p>
 
+<p>
+Analogue of <b>boolean</b> in Russian: <b>булевский тип</b>, <b>логический тип</b></p>
+</p>
+
 <h3>Why is not this type called <b>logical</b>?</h3>
 
 <p>
