--- a/data/terms/Compiler.html
+++ b/data/terms/Compiler.html
@@ -1,6 +1,10 @@
 <h3>Definition</h3>
 <p>Compiler - is a program that translates the source code of some programming language into another one. Usually compiler converts a source code  into <b>machine code</b>.</p>
 
+<p>
+    Analogue of <b>compiler</b> in Russian: <b>компилятор</b></p>
+</p>
+
 <h3>Why do we need to use compilers?</h3>
 
 <p>Computer isn\'t designed to understand high-level languages, which uses human-readable identificators and key words. CPU can recognize only the fixed set of operations each of which is encoded by binary number.</p>
