--- a/data/terms/Expresssion.html
+++ b/data/terms/Expresssion.html
@@ -5,6 +5,14 @@
     <b>functions</b> that programming language computes to a certain value.
 </p>
 
+<p>
+    Analogue of <b>expression</b> in Russian: <b>выражение</b></p>. 
+</p>
+
+<p>
+    <b>Warning!!!</b> it's too easy to confuse terms <b>expression</b> and <b>statement</b> in Russian
+</p>
+
 <h3>Examples</h3>
 <p>
     For instance, <b>3+8/4</b> - expression, because it can be computed to a result <b>5</b>. 
