--- a/data/terms/Garbage collector.html
+++ b/data/terms/Garbage collector.html
@@ -4,6 +4,10 @@ Garbage collector (GC) - is an instrument for automatic memory management. It's 
 <i>Java</i>, <i>C#</i> and other programming languages. 
 </p>
 
+<p>
+    Analogue of <b>garbage collector</b> in Russian: <b>сборщик мусора</b></p>. 
+</p>
+
 <h3>How does it work?<h3>
 
 <p>
