--- a/data/terms/Magic number.html
+++ b/data/terms/Magic number.html
@@ -3,6 +3,10 @@
 Magic numbers - number literals, usage of which in programs isn't obvious for everyone except the author of the program. By the way after several months it will be completely unclear even for him too.
 </p>
 
+<p>
+    Analogue of <b>magic number</b> in Russian: <b>магические числа</b></p>. 
+</p>
+
 <h3>How to avoid using of magic numbers?</h3>
 
 <p>
