--- a/data/terms/Level of language.html
+++ b/data/terms/Level of language.html
@@ -1,15 +1,22 @@
 <h3>Classification of programming languages</h3>
 <p>
-In programming world there\'re many different classification of what we call "programming languages". 
+In programming world there're many different classification of what we call "programming languages". 
+</p>
+
+
+
+<p>
+One of that classification is following - there're two types of programming languages: low-level and high-level.
 </p>
 
 <p>
-One of that classification is following - there\'re two types of programming languages: low-level and high-level.
+	Analogue of <b>low-level language</b> and <b>high-level language</b> in Russian are <b>низкоуровневый язык программирования</b> and
+	<b>высокоуровневый язык программирования</b> respectively.
 </p>
 
 <h3>Low-level languages</h3>
 <p>
-Let\'s begin with low-level languages. They are designed to be convenient for system programmers who tends to create a high-performance programs, which can use almost every hardware feature of using machine. For example, such languages are used for creating *operating systems (OS)*. In particular - the most popular languages for creating OS are C and C++. 
+Let's begin with low-level languages. They are designed to be convenient for system programmers who tends to create a high-performance programs, which can use almost every hardware feature of using machine. For example, such languages are used for creating *operating systems (OS)*. In particular - the most popular languages for creating OS are C and C++. 
 </p>
 
 <p>
@@ -37,5 +44,5 @@ Moreover high-level languages are designed for creating business application and
 	There\'re a huge number of high-level languages: <i>Python</i>, <i>Java</i>, <i>Rust</i>, <i>C++</i> (it also has a low-level instruments), <i>Pascal</i>, <i>Lua</i> and so on.
 </p>
 
-<h3>Cross references</h3>
+<h3>See also</h3>
 Programming language, Operating systems, Syntax, Stream, Cross-platform developing
