--- a/data/terms/Boolean.html
+++ b/data/terms/Boolean.html
@@ -1,6 +1,7 @@
 <h3>Definition</h3>
 <p>
-Boolean (<b>bool</b>) - is one of fundamental data types in programming, it represents a logical type. Usually in most programming languages it takes 1 byte, but theoretically it requires only 1 bit, because thare're only 2 possible values: <b>true</b> or <b>false</b>.
+Boolean (<b>bool</b>) - is one of fundamental data types in programming, it represents a logical type. 
+Usually in most programming languages it takes 1 byte, but theoretically it requires only 1 bit, because there're only 2 possible values: <b>true</b> or <b>false</b>.
 </p>
 
 <p>
