--- a/data/terms/Compiler.html
+++ b/data/terms/Compiler.html
@@ -7,7 +7,7 @@
 
 <h3>Why do we need to use compilers?</h3>
 
-<p>Computer isn\'t designed to understand high-level languages, which uses human-readable identificators and key words. CPU can recognize only the fixed set of operations each of which is encoded by binary number.</p>
+<p>Computer isn't designed to understand high-level languages, which uses human-readable identificators and key words. CPU can recognize only the fixed set of operations each of which is encoded by binary number.</p>
 
 <p>
 Hence to force our machines to execute our programs we have to <b>translate</b> the high-level source code into machine code. 
