--- a/data/terms/Scope.html
+++ b/data/terms/Scope.html
@@ -3,6 +3,10 @@
 By <b>item</b> we usually mean <b>variables</b>.
 </p>
 
+<p>
+    Analogue of <b>scope</b> in Russian: <b>область видимости</b></p>. 
+</p>
+
 <h3>Kinds of scopes</h3>
 <p>We distinguish two types of scopes:
 <ol>
