Добавил общее определение профессии программиста

--- a/data/terms/Variable.html
+++ b/data/terms/Variable.html
@@ -6,8 +6,8 @@
     <p>
         Analogue of <b>variable</b> in Russian: <b>переменная</b></p>. 
     </p>
-
-<h3>Furthemore</h3>
+    
+<h3>Furthermore</h3>
     <p>
         Usually names of variables consist of letters of Latin alphabet (lowercase and uppercase as well), digits and underscore symbol "_".
     </p>
@@ -24,4 +24,4 @@
     </p>
 
 <h3>See also</h3>
-    Data type, Memory, Identificator
+Data type, Memory, Identificator
