Описание знаячения файла 'readme'

--- a/data/terms/Handle.html
+++ b/data/terms/Handle.html
@@ -7,7 +7,7 @@
 </p>
 
 <p>
-    Analogue of <b>handle</b> in Russian: <b>дескриптор</b></p>
+    Analogue of <b>handle</b> in Russian: <b>дескриптор</b>
 </p>
 
 <h3>What is a handle internally?</h3>
