Описание термина 'GUI'

--- a/data/terms/texts/Slice.html
+++ b/data/terms/texts/Slice.html
@@ -14,7 +14,7 @@
     The difficult is some <b>programming languages</b> defines <b>slice</b> in their own
     way. For instance, in <b>Rust programming language</b> <b>slice</b> is defined as a
     <b>reference</b> to a contiguous sequence of elements of a collection, i.e. here you
-    can define a reference to a part of sequence rather than to a whole sequence.
+    can define a reference to a part of sequence rather than to a whole collection.
 </p>
 
 <p>
@@ -37,7 +37,7 @@
 <p>
     <b>Slice</b> should be considered as a <b>complex</b> construction. Not every programming
     language provides ability to get slices. For instance, <b>Rust</b> and <b>Python</b> - relatively
-    new programming languages do, and such languages as <b>C</b> don's.
+    new programming languages do, and such languages as <b>C</b> don't.
 </p>
 
 <h3>See also</h3>
