--- a/data/terms/texts/Sockets.html
+++ b/data/terms/texts/Sockets.html
@@ -38,5 +38,5 @@
 
 <h3>See also</h3>
 <p>
-    Data structure, C(this language can provide to you a native sockets without any shell), 
+    Data structure, C(this language can provide to you a native sockets without any shell) 
 </p>
